--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -3,6 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 ffi=true
+optimizer = true
 remmapings = [
     '@openzeppelin=/lib/openzeppelin-contracts/',
     'forge-std/=lib/forge-std/src/'
