--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "@aztec/bb.js": "^0.82.2",
     "@noir-lang/noir_js": "^1.0.0-beta.6",
-    "ethers": "6.13.5"
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.81.5",
+    "ethers": "^6.14.4"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
